--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,16 @@
-/vendor
 /node_modules
+/public/hot
 /public/storage
-Homestead.yaml
+/storage
+/vendor
+/.idea
+/.vscode
+/.vagrant
 Homestead.json
+Homestead.yaml
+npm-debug.log
+yarn-error.log
 .env
+composer.lock
+.DS_Store
 .php_cs.cache
