--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,12 @@
 /vendor
 /node_modules
 /public/storage
-Homestead.yaml
 Homestead.json
+Homestead.yaml
+npm-debug.log
+yarn-error.log
 .env
-composer.lock
-package-lock.json
 .php_cs.cache
 /storage
-/vendor
 .DS_Store
+composer.lock
